@@ -40,7 +40,7 @@ public class TestMailReaderSampler {
         } catch (IOException ex) {
             ex.printStackTrace(System.err);
         }
-        JMeterUtils.setLocale(new Locale("ignoreResources"));
+        JMeterUtils.setLocale(Locale.of("ignoreResources"));
     }
 
     @Test
